hphp/hack/test/typecheck/references/pass_by_ref/reffiness_mismatch3.php.exp
File "reffiness_mismatch3.php", line 4, characters 25-25:
Encountered unexpected token '&'. (Parsing[1002])
